macros/tests/trybuild/trait_alias.stderr
error: cannot use `serde_args::generate` macro on trait
 --> tests/trybuild/trait_alias.rs:4:1
  |
4 | trait Foo = Iterator + Sync;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
